Terraform API creation logic in place
Terraform creates the API Gateway and related artefacts
The Lambda is implemented with FastAPI
The API correctly replies

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-lambda/packages
+**/.terraform
+**/terraform.tfstate
+**/terraform.tfstate.backup
 
-.terraform
-terraform.tfstate
-terraform.tfstate.backup
+lambda.zip
+**/__pycache__
 
