--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+uvicorn = "*"
 
 [packages]
 moto = "*"
 fastapi = "*"
 mangum = "*"
+pydantic = {extras = ["dotenv"], version = "*"}
 
 [requires]
 python_version = "3.8"
